# Lab2_2

./: CMakeLists.txt  main.c
Librerie/: libreria_principale.c  libreria_principale.h
